--- a/src/main/resources/templates/user/BalanceRecharge.html
+++ b/src/main/resources/templates/user/BalanceRecharge.html
@@ -498,10 +498,10 @@
             <!-- Sidebar user (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 <div class="image">
-                    <img src="/AdminLTE-3.0.5/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                    <img id="sideImg" class="img-circle elevation-2" alt="User Image">
                 </div>
                 <div class="info">
-                    <a href="#" class="d-block">Alexander Pierce</a>
+                    <a href="/user/MyInformation" class="d-block" id="sideName"></a>
                 </div>
             </div>
 
