添加了评论功能

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,10 +12,10 @@
 
     <!-- Title  -->
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/logo.png">
 
 <!-- Document Title -->
-<title>Home</title>
+<title>SnailGo-主页</title>
 
 <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
 <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
@@ -758,7 +758,7 @@
         
         <!-- heading -->
         <div class="heading">
-          <h2>Top Selling of the Week</h2>
+          <h2>本周销量排行榜</h2>
           <hr>
         </div>
         
@@ -1346,7 +1346,7 @@
         
         <!-- heading -->
         <div class="heading">
-          <h2>From our Blog</h2>
+          <h2>Blog</h2>
           <hr>
         </div>
         <div id="blog-slide" class="with-nav"> 
