--- a/src/main/resources/templates/user/ViewHistory.html
+++ b/src/main/resources/templates/user/ViewHistory.html
@@ -51,9 +51,8 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <div class="nav-right" style="right: 20px">
-                    <a href="/user/MyInformation"><i class="fa fa-user"></i> <span id="login"></span><strong><span id="test"></span></strong> </a>
-                    <a href="/"><i class="fa fa-comment"></i><strong>消息</strong></a>
-                    <a id="tocartid" href="#" onclick="tocart()"> <i class="fa fa-shopping-cart"></i></a>
+                    <a href="/" style="color: black"><i class="fa fa-comment" style="color: black"></i><strong>消息</strong></a>
+                    <a id="tocartid" href="#" onclick="tocart()" style="color: black"> <i class="fa fa-shopping-cart"></i></a>
                 </div>
             </li>
 
@@ -64,7 +63,7 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a href="/AdminLTE-3.0.5/index3.html" class="brand-link">
+        <a href="/" class="brand-link">
             <img src="/img/logo.png"
                  alt="AdminLTE Logo"
                  class="brand-image img-circle elevation-3"
@@ -118,14 +117,6 @@
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 余额充值
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item has-treeview">
-                        <a href="/index" class="nav-link">
-                            <i class="nav-icon fas fa-copy"></i>
-                            <p>
-                                商品页面
                             </p>
                         </a>
                     </li>
@@ -264,6 +255,16 @@
 <script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/AdminLTE-3.0.5/dist/js/demo.js"></script>
+<script>
+    function tocart() {
+        var str = document.cookie;
+        if (str=='') {
+            $('#tocartid').attr("href","/loginPage");
+        }else {
+            $('#tocartid').attr("href","/cart");
+        }
+    }
+</script>
 <!-- Page script -->
 <script>
     $(function () {
