--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -27,12 +27,138 @@
 	<!-- Google Font: Source Sans Pro -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
-<body class="hold-transition sidebar-collapse">
+<body class="hold-transition sidebar-mini" >
 	<div class="wrapper">
+		<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+			<!-- Left navbar links -->
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+				</li>
+				<li class="nav-item d-none d-sm-inline-block">
+					<a href="/" class="nav-link">主页</a>
+				</li>
+
+
+			</ul>
+
+
+			<!-- Right navbar links -->
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<div class="nav-right" style="right: 20px">
+						<a href="/" style="color: black"><i class="fa fa-comment" style="color: black"></i><strong>消息</strong></a>
+						<a id="tocartid" href="#" onclick="tocart()" style="color: black"> <i class="fa fa-shopping-cart"></i></a>
+					</div>
+				</li>
+
+			</ul>
+		</nav>
+		<!-- /.navbar -->
+
+		<!-- Main Sidebar Container -->
+		<aside class="main-sidebar sidebar-dark-primary elevation-4">
+			<!-- Brand Logo -->
+			<a href="/" class="brand-link">
+				<img src="/img/logo.png"
+					 alt="AdminLTE Logo"
+					 class="brand-image img-circle elevation-3"
+					 style="opacity: .8">
+				<span class="brand-text font-weight-light">Snail Go</span>
+			</a>
+
+			<!-- Sidebar -->
+			<div class="sidebar">
+				<!-- Sidebar user (optional) -->
+				<div class="user-panel mt-3 pb-3 mb-3 d-flex">
+					<div class="image">
+						<img id="sideImg" class="img-circle elevation-2" alt="User Image">
+					</div>
+					<div class="info">
+						<a href="/user/MyInformation" class="d-block" id="sideName"></a>
+					</div>
+				</div>
+
+				<!-- Sidebar Menu -->
+				<nav class="mt-2">
+					<ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+						<!-- Add icons to the links using the .nav-icon class
+                             with font-awesome or any other icon font library -->
+						<li class="nav-item has-treeview">
+							<a href="/user/MyInformation" class="nav-link">
+								<i class="nav-icon fas fa-tachometer-alt"></i>
+								<p>
+									个人中心
+								</p>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a href="/user/AdressManage" class="nav-link">
+								<i class="nav-icon fas fa-th"></i>
+								<p>
+									地址管理
+								</p>
+							</a>
+						</li>
+						<li class="nav-item has-treeview">
+							<a href="/user/changepassword" class="nav-link">
+								<i class="nav-icon fas fa-copy"></i>
+								<p>
+									修改密码
+								</p>
+							</a>
+						</li>
+						<li class="nav-item has-treeview">
+							<a href="/balance/balancepage" class="nav-link">
+								<i class="nav-icon fas fa-copy"></i>
+								<p>
+									余额充值
+								</p>
+							</a>
+						</li>
+						<li class="nav-item has-treeview">
+							<a href="/user/OrderHistory" class="nav-link">
+								<i class="nav-icon fas fa-copy"></i>
+								<p>
+									订单记录
+								</p>
+							</a>
+						</li>
+						<li class="nav-item has-treeview">
+							<a href="/user/viewhistory" class="nav-link">
+								<i class="nav-icon fas fa-copy"></i>
+								<p>
+									浏览记录
+								</p>
+							</a>
+						</li>
+						<li class="nav-item has-treeview" id="myShop">
+							<a href="/user/MyProfile" class="nav-link">
+								<i class="nav-icon fas fa-copy"></i>
+								<p>
+									我的商店
+								</p>
+							</a>
+						</li>
+						<li class="nav-item has-treeview" id="shopManagement">
+							<a href="/user/ShopManage" class="nav-link">
+								<i class="nav-icon fas fa-copy"></i>
+								<p>
+									管理商店
+								</p>
+							</a>
+						</li>
+					</ul>
+				</nav>
+				<!-- /.sidebar-menu -->
+			</div>
+			<!-- /.sidebar -->
+		</aside>
 		<section class="content-header">
 			<div class="container-fluid">
 				<div class="row mb-2">
-					<div class="col-sm-6">
+					<div class="col-sm-3"></div>
+					<div class="col-sm-3">
 						<h1>聊天室</h1>
 					</div>
 					<div class="col-sm-6">
@@ -49,7 +175,7 @@
 			<div class="content">
 	昵称：<input type="text" id="nickname" />
 
-	<button class="btn btn-primary" onclick="conectWebSocket()">连接WebSocket</button>
+	<button class="btn btn-primary" onclick="conectWebSocket()">连接</button>
 	<button class="btn btn-danger" onclick="closeWebSocket()">断开连接</button>
 
 	<br />
