地址页面修改

--- a/src/main/resources/templates/user/CheckOrder.html
+++ b/src/main/resources/templates/user/CheckOrder.html
@@ -98,7 +98,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="/user/AdressManage" class="nav-link">
-                            <i class="nav-icon fas fa-address-book" style="color:black"></i>
+                            <i class="nav-icon fas fa-location-arrow" style="color:black"></i>
                             <p style="color: black">
                                 地址管理
                             </p>
@@ -122,7 +122,7 @@
                     </li>
                     <li class="nav-item has-treeview">
                         <a href="/user/OrderHistory" class="nav-link">
-                            <i class="nav-icon fas fa-bi" style="color:black"></i>
+                            <i class="nav-icon fas fa-copy" style="color:black"></i>
                             <p style="color: black">
                                 订单记录
                             </p>
@@ -130,7 +130,7 @@
                     </li>
                     <li class="nav-item has-treeview">
                         <a href="/user/viewhistory" class="nav-link">
-                            <i class="nav-icon fas fa-copy" style="color:black"></i>
+                            <i class="nav-icon fas fa-history" style="color:black"></i>
                             <p style="color: black">
                                 浏览记录
                             </p>
@@ -138,7 +138,7 @@
                     </li>
                     <li class="nav-item has-treeview" id="myShop">
                         <a href="/user/MyProfile" class="nav-link">
-                            <i class="nav-icon fas fa-copy" style="color:black"></i>
+                            <i class="nav-icon fas fa-shopping-basket" style="color:black"></i>
                             <p style="color: black">
                                 我的商店
                             </p>
@@ -146,9 +146,17 @@
                     </li>
                     <li class="nav-item has-treeview" id="shopManagement">
                         <a href="/user/ShopManage" class="nav-link">
-                            <i class="nav-icon fas fa-copy" style="color:black"></i>
+                            <i class="nav-icon fas fa-book-open" style="color:black"></i>
                             <p style="color: black">
                                 管理商店
+                            </p>
+                        </a>
+                    </li>
+                    <li class="nav-item has-treeview">
+                        <a href="/chatting" class="nav-link">
+                            <i class="nav-icon fas fa-comment" style="color:black"></i>
+                            <p style="color: black">
+                                我的会话
                             </p>
                         </a>
                     </li>
